Fix timeline break in pr lists

--- a/github-dark.css
+++ b/github-dark.css
@@ -1190,6 +1190,11 @@ timeline-comment::before {
     background-color: var(--body-color)
 }
 
+.TimelineItem-break {
+    background-color: var(--body-color);
+    border-top: 4px solid var(--accent-color);
+}
+
 /* Site | Issue Tab */
 
 .Box-row--focus-gray.navigation-focus {
